--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -70,3 +70,16 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  analytics-db:
+    image: postgres:15
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres123
+    ports:
+      - "5433:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
