--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -78,6 +78,8 @@ services:
       - POSTGRES_PASSWORD=postgres123
     ports:
       - "5433:5432"
+    volumes:
+      - ./docker/analytics-db/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
