--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -79,9 +79,13 @@ services:
     ports:
       - "5433:5432"
     volumes:
+      - analytics-data:/var/lib/postgresql/data
       - ./docker/analytics-db/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
+
+volumes:
+  analytics-data:
